# tv_language_trainer

./: Cargo.toml  test.toml
resources/Subtitles/: papel_S01E01.txt  papel_S01E01_en.srt  papel_S01E01_es.srt  papel_S01E10.txt  papel_S01E10_en.srt  papel_S01E10_es.srt  sentences.srt  test.srt  todo_sobre_mi_madre.srt  todo_sobre_mi_madre.txt  todo_sobre_mi_madre_1.srt
resources/test/: sentence_extractor.toml  test.srt
src/: flashcard.rs  lib.rs  main.rs  subtitle.rs  toolbox.rs
