[package]
name = "tv_language_trainer"
version = "0.1.0"
authors = ["tmazhuan <thomas.mazhuancherry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tv_language_trainer"
path = "src/main.rs"


[dependencies]
regex = "1.4.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
toml = "0.5.8"